chore(sim): examples and fixes