@@ -21,21 +21,15 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import org.apache.commons.io.FileUtils;
-import org.bigraphs.framework.core.Control;
-import org.bigraphs.framework.core.Signature;
-import org.bigraphs.framework.core.datatypes.FiniteOrdinal;
-import org.bigraphs.framework.core.datatypes.StringTypedName;
 import org.bigraphs.framework.core.exceptions.*;
 import org.bigraphs.framework.core.exceptions.builder.LinkTypeNotExistsException;
 import org.bigraphs.framework.core.impl.pure.PureBigraph;
 import org.bigraphs.framework.core.impl.pure.PureBigraphBuilder;
 import org.bigraphs.framework.core.impl.signature.DynamicSignature;
-import org.bigraphs.framework.core.impl.signature.DynamicSignatureBuilder;
 import org.bigraphs.framework.core.reactivesystem.ParametricReactionRule;
 import org.bigraphs.framework.core.reactivesystem.ReactionGraph;
 import org.bigraphs.framework.core.reactivesystem.ReactionRule;
@@ -45,7 +39,7 @@ import org.bigraphs.framework.simulation.matching.pure.PureReactiveSystem;
 import org.bigraphs.framework.simulation.modelchecking.BigraphModelChecker;
 import org.bigraphs.framework.simulation.modelchecking.ModelCheckingOptions;
 import org.bigraphs.framework.simulation.modelchecking.PureBigraphModelChecker;
-import org.bigraphs.framework.visualization.BigraphGraphvizExporter;
+import org.bigraphs.testing.BigraphUnitTestSupport;
 import org.jgrapht.Graph;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Disabled;
@@ -55,7 +49,7 @@ import org.junit.jupiter.api.Test;
  * @author Dominik Grzelak
  */
 @Disabled
-public class CountingExample {
+public class CountingExample implements BigraphUnitTestSupport {
     private final static String TARGET_DUMP_PATH = "src/test/resources/dump/counting/";
 
     @BeforeAll
@@ -67,65 +61,60 @@ public class CountingExample {
         new File(TARGET_DUMP_PATH + "states/").mkdir();
     }
 
+    private DynamicSignature createExampleSignature() {
+        return pureSignatureBuilder()
+                .add("Age", 0)
+                .add("S", 0)
+                .add("Z", 0)
+                .add("True", 0)
+                .add("False", 0)
+                .add("Left", 0)
+                .add("Right", 0)
+                .create();
+    }
+
     @Test
     void simulate() throws LinkTypeNotExistsException, InvalidConnectionException, IOException, InvalidReactionRuleException, BigraphSimulationException, ReactiveSystemException {
-        // Create reaction rulesname
+
         PureReactiveSystem reactiveSystem = new PureReactiveSystem();
+        PureBigraph agent_a = createInitialState(3, 4);
+        reactiveSystem.setAgent(agent_a);
 
-        PureBigraph agent_a = createAgent_A(3, 4);
-        BigraphGraphvizExporter.toPNG(agent_a,
-                true,
-                new File(TARGET_DUMP_PATH + "counting_agent.png")
-        );
+        toPNG(agent_a, "counting_agent", TARGET_DUMP_PATH);
 
-//        PureBigraph agent = (PureBigraph) createAgent_A();
         ReactionRule<PureBigraph> rr_1 = createReactionRule_1();
         ReactionRule<PureBigraph> rr_2 = createReactionRule_2();
         ReactionRule<PureBigraph> rr_3 = createReactionRule_3();
-        BigraphGraphvizExporter.toPNG(rr_1.getRedex(),
-                true,
-                new File(TARGET_DUMP_PATH + "rr_lhs_1.png")
-        );
-        BigraphGraphvizExporter.toPNG(rr_1.getReactum(),
-                true,
-                new File(TARGET_DUMP_PATH + "rr_rhs_1.png")
-        );
-        BigraphGraphvizExporter.toPNG(rr_2.getRedex(),
-                true,
-                new File(TARGET_DUMP_PATH + "rr_lhs_2.png")
-        );
-        BigraphGraphvizExporter.toPNG(rr_3.getRedex(),
-                true,
-                new File(TARGET_DUMP_PATH + "rr_lhs_3.png")
-        );
-
-//        ModelCheckingOptions.ExportOptions.Builder builder = ModelCheckingOptions.exportOpts();
-//        ModelCheckingOptions.TransitionOptions.Builder builder1 = transitionOpts();
         reactiveSystem.addReactionRule(rr_1);
         reactiveSystem.addReactionRule(rr_2);
         reactiveSystem.addReactionRule(rr_3);
+
         assertTrue(reactiveSystem.isSimple());
-        Path currentRelativePath = Paths.get("");
-        Path completePath = Paths.get(currentRelativePath.toAbsolutePath().toString(), TARGET_DUMP_PATH, "transition_graph_2.png");
+
+        toPNG(rr_1.getRedex(), "r1_lhs", TARGET_DUMP_PATH);
+        toPNG(rr_1.getReactum(), "r1_rhs", TARGET_DUMP_PATH);
+        toPNG(rr_2.getRedex(), "r2_lhs", TARGET_DUMP_PATH);
+        toPNG(rr_2.getReactum(), "r2_rhs", TARGET_DUMP_PATH);
+        toPNG(rr_3.getRedex(), "r3_lhs", TARGET_DUMP_PATH);
+        toPNG(rr_3.getReactum(), "r3_rhs", TARGET_DUMP_PATH);
+
+
         ModelCheckingOptions opts = ModelCheckingOptions.create();
         opts
                 .and(transitionOpts()
-                                .setMaximumTransitions(8)
-                                .setMaximumTime(30)
-//                        .allowReducibleClasses(true)
-                                .create()
+                        .setMaximumTransitions(8)
+                        .setMaximumTime(30)
+                        .create()
                 )
                 .doMeasureTime(true)
                 .and(ModelCheckingOptions.exportOpts()
-                                .setReactionGraphFile(new File(completePath.toUri()))
+                        .setReactionGraphFile(Paths.get(TARGET_DUMP_PATH, "transition_graph.png").toFile())
                         .setOutputStatesFolder(new File(TARGET_DUMP_PATH + "states/"))
-//                        .setPrintCanonicalStateLabel(true)
-                                .setPrintCanonicalStateLabel(false)
+                        .setPrintCanonicalStateLabel(false)
                         .setFormatsEnabled(List.of(ModelCheckingOptions.ExportOptions.Format.PNG))
-                                .create()
+                        .create()
                 )
         ;
-        reactiveSystem.setAgent(agent_a);
 
         PureBigraphModelChecker modelChecker = new PureBigraphModelChecker(reactiveSystem,
                 BigraphModelChecker.SimulationStrategy.Type.BFS,
@@ -141,13 +130,10 @@ public class CountingExample {
         Graph<ReactionGraph.LabeledNode, ReactionGraph.LabeledEdge> graph = modelChecker.getReactionGraph().getGraph();
         assertEquals(5, graph.vertexSet().size());
         assertEquals(4, graph.edgeSet().size());
-        System.out.println(new ArrayList<>(graph.vertexSet()).get(0).getCanonicalForm());
+        System.out.println(new ArrayList<>(graph.vertexSet()).getFirst().getCanonicalForm());
         System.out.println(new ArrayList<>(graph.vertexSet()).get(graph.vertexSet().size() - 1).getCanonicalForm());
-//        BigraphFileModelManagement.exportAsInstanceModel((EcoreBigraph) new ArrayList<>(graph.vertexSet()).get(graph.vertexSet().size() - 1), System.out);
-//        boolean c1 = "r0$Age$True$Z#".equals(new ArrayList<>(graph.vertexSet()).get(0).getCanonicalForm()) ||
-//                "r0$Age$True$Z#".equals(new ArrayList<>(graph.vertexSet()).get(graph.vertexSet().size() - 1)
-//                        .getCanonicalForm());
-        String s1 = new ArrayList<>(graph.vertexSet()).get(0).getCanonicalForm();
+
+        String s1 = new ArrayList<>(graph.vertexSet()).getFirst().getCanonicalForm();
         String s2 = new ArrayList<>(graph.vertexSet()).get(graph.vertexSet().size() - 1).getCanonicalForm();
         boolean c1 = (s1.startsWith("r0$Age$True") && s1.endsWith("$Z#")) ||
                 s2.startsWith("r0$Age$True") && s2.endsWith("$Z#");
@@ -159,7 +145,7 @@ public class CountingExample {
      * big numberRight = Right.S.S.S.S.Z;
      * big start = Age . (numberLeft | numberRight);
      */
-    public static PureBigraph createAgent_A(final int left, final int right) throws ControlIsAtomicException, InvalidArityOfControlException, LinkTypeNotExistsException {
+    private PureBigraph createInitialState(final int left, final int right) throws ControlIsAtomicException, InvalidArityOfControlException, LinkTypeNotExistsException {
         DynamicSignature signature = createExampleSignature();
         PureBigraphBuilder<DynamicSignature> builder = pureBuilder(signature);
 
@@ -169,21 +155,7 @@ public class CountingExample {
         PureBigraphBuilder<DynamicSignature>.Hierarchy rightNode =
                 builder.hierarchy(signature.getControlByName("Right"))
                         .child("S");
-//        IntStream.range(0, left).forEach(x -> {
-//            leftNode.withNewHierarchy().child("S");
-//        });
-//        PureBigraphBuilder<DefaultDynamicSignature>.Hierarchy s = IntStream.range(0, left)
-//                .boxed()
-//                .map(x -> "S")
-//                .reduce((x) -> {
-//                    return builder.newHierarchy(signature.getControlByName(x)).child(x);
-//                }).get();
-//        PureBigraphBuilder<DefaultDynamicSignature>.Hierarchy s = builder.newHierarchy(signature.getControlByName("S"));
-//        PureBigraphBuilder<DefaultDynamicSignature>.Hierarchy s1 = builder.newHierarchy(signature.getControlByName("S"));
-//        PureBigraphBuilder<DefaultDynamicSignature>.Hierarchy s2 = builder.newHierarchy(signature.getControlByName("S"));
-//        s = s.child(s1);
-//        s = s.withNewHierarchy().child(s2);
-//        s = s.child(s2);
+
         for (int i = 0; i < left - 1; i++) {
             leftNode = leftNode.down().child("S");
         }
@@ -207,7 +179,7 @@ public class CountingExample {
     /**
      * react r1 = Left.S | Right.S -> Left | Right;
      */
-    public static ReactionRule<PureBigraph> createReactionRule_1() throws LinkTypeNotExistsException, InvalidConnectionException, ControlIsAtomicException, InvalidReactionRuleException {
+    private ReactionRule<PureBigraph> createReactionRule_1() throws ControlIsAtomicException, InvalidReactionRuleException {
         DynamicSignature signature = createExampleSignature();
         PureBigraphBuilder<DynamicSignature> builder = pureBuilder(signature);
         PureBigraphBuilder<DynamicSignature> builder2 = pureBuilder(signature);
@@ -231,7 +203,7 @@ public class CountingExample {
     /**
      * react r2 = Left.Z | Right.S -> True;
      */
-    public static ReactionRule<PureBigraph> createReactionRule_2() throws LinkTypeNotExistsException, InvalidConnectionException, ControlIsAtomicException, InvalidReactionRuleException {
+    private ReactionRule<PureBigraph> createReactionRule_2() throws ControlIsAtomicException, InvalidReactionRuleException {
         DynamicSignature signature = createExampleSignature();
         PureBigraphBuilder<DynamicSignature> builder = pureBuilder(signature);
         PureBigraphBuilder<DynamicSignature> builder2 = pureBuilder(signature);
@@ -253,7 +225,7 @@ public class CountingExample {
     /**
      * react r3 = Left | Right.Z -> False;
      */
-    public static ReactionRule<PureBigraph> createReactionRule_3() throws LinkTypeNotExistsException, InvalidConnectionException, ControlIsAtomicException, InvalidReactionRuleException {
+    private ReactionRule<PureBigraph> createReactionRule_3() throws ControlIsAtomicException, InvalidReactionRuleException {
         DynamicSignature signature = createExampleSignature();
         PureBigraphBuilder<DynamicSignature> builder = pureBuilder(signature);
         PureBigraphBuilder<DynamicSignature> builder2 = pureBuilder(signature);
@@ -270,20 +242,5 @@ public class CountingExample {
         PureBigraph reactum = builder2.create();
         ReactionRule<PureBigraph> rr = new ParametricReactionRule<>(redex, reactum);
         return rr;
-    }
-
-    private static <C extends Control<?, ?>, S extends Signature<C>> S createExampleSignature() {
-        DynamicSignatureBuilder defaultBuilder = pureSignatureBuilder();
-        defaultBuilder
-                .newControl().identifier(StringTypedName.of("Age")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .newControl().identifier(StringTypedName.of("S")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .newControl().identifier(StringTypedName.of("Z")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .newControl().identifier(StringTypedName.of("True")).arity(FiniteOrdinal.ofInteger(1)).assign()
-                .newControl().identifier(StringTypedName.of("False")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .newControl().identifier(StringTypedName.of("Left")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .newControl().identifier(StringTypedName.of("Right")).arity(FiniteOrdinal.ofInteger(0)).assign()
-        ;
-
-        return (S) defaultBuilder.create();
     }
 }
