@@ -28,8 +28,6 @@ import org.bigraphs.framework.core.Bigraph;
 import org.bigraphs.framework.core.BigraphFileModelManagement;
 import org.bigraphs.framework.core.ControlStatus;
 import org.bigraphs.framework.core.EcoreBigraph;
-import org.bigraphs.framework.core.datatypes.FiniteOrdinal;
-import org.bigraphs.framework.core.datatypes.StringTypedName;
 import org.bigraphs.framework.core.exceptions.ReactiveSystemException;
 import org.bigraphs.framework.core.impl.pure.PureBigraph;
 import org.bigraphs.framework.core.impl.pure.PureBigraphBuilder;
@@ -53,6 +51,9 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
+/**
+ * @author Dominik Grzelak
+ */
 @Disabled
 public class SubBRSUnitTest extends BaseExampleTestSupport {
     private final static String TARGET_DUMP_PATH = "src/test/resources/dump/subbrs/";
@@ -69,7 +70,34 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
             dump.mkdirs();
             FileUtils.cleanDirectory(new File(TARGET_DUMP_PATH));
             new File(TARGET_DUMP_PATH + "states/").mkdir();
+            new File(TARGET_DUMP_PATH + "states2/").mkdir();
         }
+    }
+
+    private DynamicSignature sigMain() {
+        DynamicSignature sigM = pureSignatureBuilder()
+                .add("Item", 0)
+                .add("Queue", 0)
+                .add("Store", 0)
+                .add("Waiting", 0, ControlStatus.PASSIVE)
+                .add("Ready", 0, ControlStatus.PASSIVE)
+                .add("Finished", 0, ControlStatus.PASSIVE)
+                .create();
+
+
+        return BigraphUtil.mergeSignatures(sigM, sigSub());
+    }
+
+    private DynamicSignature sigSub() {
+        return pureSignatureBuilder()
+                .add("Plus", 0)
+                .add("Sum", 0)
+                .add("S", 0)
+                .add("Z", 0)
+                .add("Result", 0)
+                .add("Left", 0)
+                .add("Right", 0)
+                .create();
     }
 
     @Test
@@ -78,11 +106,11 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
         system.execute();
     }
 
-    public static class MainBRS extends PureReactiveSystem implements BigraphModelChecker.ReactiveSystemListener<PureBigraph> {
+    private class MainBRS extends PureReactiveSystem implements BigraphModelChecker.ReactiveSystemListener<PureBigraph> {
 
         public MainBRS(PureBigraph mainModel) throws Exception {
             setAgent(mainModel);
-            eb(getAgent(), "mainModel");
+            toPNG(getAgent(), "mainModel", TARGET_DUMP_PATH);
             ReactionRule<PureBigraph> mainR1 = mainR1();
             ReactionRule<PureBigraph> mainR2 = mainR2();
             ReactionRule<PureBigraph> mainR3 = mainR3();
@@ -90,20 +118,20 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
             addReactionRule(mainR2);
             addReactionRule(mainR3);
 
-            eb(mainR1.getRedex(), "rrM1_lhs");
-            eb(mainR1.getReactum(), "rrM1_rhs");
-            eb(mainR2.getRedex(), "rrM2_lhs");
-            eb(mainR2.getReactum(), "rrM2_rhs");
-            eb(mainR3.getRedex(), "rrM3_lhs");
-            eb(mainR3.getReactum(), "rrM3_rhs");
+            toPNG(mainR1.getRedex(), "rrM1_lhs", TARGET_DUMP_PATH);
+            toPNG(mainR1.getReactum(), "rrM1_rhs", TARGET_DUMP_PATH);
+            toPNG(mainR2.getRedex(), "rrM2_lhs", TARGET_DUMP_PATH);
+            toPNG(mainR2.getReactum(), "rrM2_rhs", TARGET_DUMP_PATH);
+            toPNG(mainR3.getRedex(), "rrM3_lhs", TARGET_DUMP_PATH);
+            toPNG(mainR3.getReactum(), "rrM3_rhs", TARGET_DUMP_PATH);
 
             SubBigraphMatchPredicate<PureBigraph> predicate = createPredicate();
             addPredicate(predicate);
-            eb(predicate.getBigraph(), "predicate");
+            toPNG(predicate.getBigraph(), "predicate", TARGET_DUMP_PATH);
 
             SubBigraphMatchPredicate<PureBigraph> pred2 = createPredicateEmpty();
             addPredicate(pred2);
-            eb(pred2.getBigraph(), "predicateEmpty");
+            toPNG(pred2.getBigraph(), "predicateEmpty", TARGET_DUMP_PATH);
         }
 
         @Override
@@ -113,20 +141,21 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
 
         @Override
         public void onSubPredicateMatched(PureBigraph currentAgent, ReactiveSystemPredicate<PureBigraph> predicate, PureBigraph context, PureBigraph subBigraph, PureBigraph redex, PureBigraph param) {
-            if (predicate.equals(getPredicateMap().get("p0"))) {
-                eb(context, "subContext");
-                eb(subBigraph, "subBigraph");
-                eb(redex, "subRedex");
-                eb(param, "subParam");
+            if (predicate.equals(getPredicateMap().get("ItemReady"))) {
+
+                toPNG(context, "subContext", TARGET_DUMP_PATH);
+                toPNG(subBigraph, "subBigraph", TARGET_DUMP_PATH);
+                toPNG(redex, "subRedex", TARGET_DUMP_PATH);
+                toPNG(param, "subParam", TARGET_DUMP_PATH);
 
                 try {
                     SubBRS subBRS = new SubBRS(param);
                     PureBigraph result = subBRS.execute();
                     if (result != null) {
-                        result = liftSigOfAgent(createSignatureMain(), result);
-                        eb(result, "resultSubBRS");
+                        result = liftSigOfAgent(sigMain(), result);
+                        toPNG(result, "resultSubBRS", TARGET_DUMP_PATH);
                         Bigraph<DynamicSignature> newAgent = ops(context).compose(redex).compose(result).getOuterBigraph();
-                        eb(newAgent, "newAgent");
+                        toPNG(newAgent, "newAgent", TARGET_DUMP_PATH);
 
                         MainBRS m2 = new MainBRS((PureBigraph) newAgent);
                         m2.execute();
@@ -141,42 +170,37 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
             PureBigraphModelChecker modelChecker = new PureBigraphModelChecker(
                     this,
                     BigraphModelChecker.SimulationStrategy.Type.BFS,
-                    options());
+                    options("states/"));
             modelChecker.setReactiveSystemListener(this);
             modelChecker.execute();
 
-            System.out.println(modelChecker.getReactionGraph().getGraph().vertexSet().size());
+            System.out.println("Number of States = " + modelChecker.getReactionGraph().getGraph().vertexSet().size());
         }
-
-        void eb(Bigraph<?> bigraph, String name) {
-            try {
-                BigraphGraphvizExporter.toPNG(bigraph, true, new File(TARGET_DUMP_PATH + name + ".png"));
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
-        }
-
     }
 
-    public static class SubBRS extends PureReactiveSystem {
+    private class SubBRS extends PureReactiveSystem {
 
         // particular sub-structure of the main-model used for computing the sum of two integer bigraphs
         public SubBRS(PureBigraph subAgent) throws Exception {
 
             //We re-load the subAgent instance but with a different signature for the sub-BRS
-            PureBigraph bigraph = liftSigOfAgent(createSignatureSub(), subAgent);
+            PureBigraph bigraph = liftSigOfAgent(sigSub(), subAgent);
             setAgent(bigraph);
             addReactionRule(subR1());
             addReactionRule(subR2());
             addReactionRule(subR3());
 
             eb(getAgent(), "subModel");
-            eb(getReactionRulesMap().get("r0").getRedex(), "rrM1_lhs");
-            eb(getReactionRulesMap().get("r0").getReactum(), "rrM1_rhs");
-            eb(getReactionRulesMap().get("r1").getRedex(), "rrM2_lhs");
-            eb(getReactionRulesMap().get("r1").getReactum(), "rrM2_rhs");
-            eb(getReactionRulesMap().get("r2").getRedex(), "rrM3_lhs");
-            eb(getReactionRulesMap().get("r2").getReactum(), "rrM3_rhs");
+            try {
+                eb(getReactionRulesMap().get("r0").getRedex(), "rrM1_lhs");
+                eb(getReactionRulesMap().get("r0").getReactum(), "rrM1_rhs");
+                eb(getReactionRulesMap().get("r1").getRedex(), "rrM2_lhs");
+                eb(getReactionRulesMap().get("r1").getReactum(), "rrM2_rhs");
+                eb(getReactionRulesMap().get("r2").getRedex(), "rrM3_lhs");
+                eb(getReactionRulesMap().get("r2").getReactum(), "rrM3_rhs");
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
         }
 
         void eb(Bigraph<?> bigraph, String name) {
@@ -191,8 +215,7 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
             PureBigraphModelChecker modelChecker = new PureBigraphModelChecker(
                     this,
                     BigraphModelChecker.SimulationStrategy.Type.BFS,
-                    options());
-//        modelChecker.setReactiveSystemListener(this);
+                    options("states2/"));
             modelChecker.execute();
 
             // Get last state
@@ -207,7 +230,7 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
     }
 
     // TODO bigraphUtil
-    public static PureBigraph liftSigOfAgent(DynamicSignature sig, PureBigraph agent) throws Exception {
+    private PureBigraph liftSigOfAgent(DynamicSignature sig, PureBigraph agent) throws Exception {
         EcoreBigraph.Stub<DynamicSignature> stub = new EcoreBigraph.Stub<>(agent);
         EPackage bMetaModel = createOrGetBigraphMetaModel(sig);
 
@@ -216,17 +239,16 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
                 stub.getInputStreamOfInstanceModel()
         );
 
-        PureBigraph bigraph = PureBigraphBuilder.create(
+        return PureBigraphBuilder.create(
                         sig.getInstanceModel(),
                         bMetaModel,
-                        eObjects.get(0)
+                        eObjects.getFirst()
                 )
                 .create();
-        return bigraph;
     }
 
-    public static ModelCheckingOptions options() {
-        Path completePath = Paths.get(TARGET_DUMP_PATH, "transition_graph.png");
+    private ModelCheckingOptions options(String folder) {
+        Path completePath = Paths.get(TARGET_DUMP_PATH, folder, "transition_graph.png");
         ModelCheckingOptions opts = ModelCheckingOptions.create();
         opts
                 .and(transitionOpts()
@@ -239,16 +261,16 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
                 .and(ModelCheckingOptions.exportOpts()
                         .setReactionGraphFile(new File(completePath.toUri()))
                         .setPrintCanonicalStateLabel(false)
-                        .setOutputStatesFolder(new File(TARGET_DUMP_PATH + "states/"))
+                        .setOutputStatesFolder(new File(TARGET_DUMP_PATH + folder))
+                        .setFormatsEnabled(List.of(ModelCheckingOptions.ExportOptions.Format.PNG))
                         .create()
                 )
         ;
         return opts;
     }
 
-
-    public PureBigraph createMainModel() throws Exception {
-        PureBigraphBuilder<DynamicSignature> builder = pureBuilder(createSignatureMain());
+    private PureBigraph createMainModel() throws Exception {
+        PureBigraphBuilder<DynamicSignature> builder = pureBuilder(sigMain());
 
         builder.root()
                 .child("Store")
@@ -259,18 +281,12 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
                 .top().child("Queue")
         ;
         PureBigraph raw = builder.create();
-        Bigraph<DynamicSignature> composed = ops(raw).compose(createAddCompAgent(1, 1)).getOuterBigraph();
+        Bigraph<DynamicSignature> composed = ops(raw).compose(createAddCompAgent(2, 1)).getOuterBigraph();
         return (PureBigraph) composed;
     }
 
-    public PureBigraph createSubModel() {
-        PureBigraphBuilder<DynamicSignature> builder = pureBuilder(createSignatureSub());
-
-        return builder.create();
-    }
-
-    public static PureBigraph createAddCompAgent(final int left, final int right) throws Exception {
-        DynamicSignature signature = createSignatureMain();
+    private PureBigraph createAddCompAgent(final int left, final int right) {
+        DynamicSignature signature = sigMain();
         PureBigraphBuilder<DynamicSignature> builder = pureBuilder(signature);
 
         PureBigraphBuilder<DynamicSignature>.Hierarchy leftNode =
@@ -299,8 +315,8 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
         return builder.create();
     }
 
-    public static ReactionRule<PureBigraph> mainR1() throws Exception {
-        DynamicSignature signature = createSignatureMain();
+    private ReactionRule<PureBigraph> mainR1() throws Exception {
+        DynamicSignature signature = sigMain();
         PureBigraphBuilder<DynamicSignature> builder = pureBuilder(signature);
         PureBigraphBuilder<DynamicSignature> builder2 = pureBuilder(signature);
 
@@ -317,12 +333,11 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
 
         PureBigraph redex = builder.create();
         PureBigraph reactum = builder2.create();
-        ReactionRule<PureBigraph> rr = new ParametricReactionRule<>(redex, reactum); //instantiationMap
-        return rr;
+        return new ParametricReactionRule<>(redex, reactum);
     }
 
-    public static SubBigraphMatchPredicate<PureBigraph> createPredicate() throws Exception {
-        PureBigraphBuilder<DynamicSignature> builder = pureBuilder(createSignatureMain());
+    private SubBigraphMatchPredicate<PureBigraph> createPredicate() throws Exception {
+        PureBigraphBuilder<DynamicSignature> builder = pureBuilder(sigMain());
 
         builder.root()
                 .child("Item").down()
@@ -330,20 +345,18 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
                 .site()
         ;
         PureBigraph bigraph = builder.create();
-        return SubBigraphMatchPredicate.create(bigraph);
+        return SubBigraphMatchPredicate.create(bigraph).withLabel("ItemReady");
     }
 
-    public static SubBigraphMatchPredicate<PureBigraph> createPredicateEmpty() throws Exception {
-        PureBigraphBuilder<DynamicSignature> builder = pureBuilder(createSignatureMain());
-
+    private SubBigraphMatchPredicate<PureBigraph> createPredicateEmpty() throws Exception {
+        PureBigraphBuilder<DynamicSignature> builder = pureBuilder(sigMain());
         builder.root().child("Item").down().child("Waiting").site();
-//        builder.root().child("Queue").down().site();
         PureBigraph bigraph = builder.create();
-        return SubBigraphMatchPredicate.create(bigraph);
+        return SubBigraphMatchPredicate.create(bigraph).withLabel("ItemWaiting");
     }
 
-    public static ReactionRule<PureBigraph> mainR2() throws Exception {
-        DynamicSignature signature = createSignatureMain();
+    private ReactionRule<PureBigraph> mainR2() throws Exception {
+        DynamicSignature signature = sigMain();
         PureBigraphBuilder<DynamicSignature> builder = pureBuilder(signature);
         PureBigraphBuilder<DynamicSignature> builder2 = pureBuilder(signature);
 
@@ -367,8 +380,8 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
         return rr;
     }
 
-    public static ReactionRule<PureBigraph> mainR3() throws Exception {
-        DynamicSignature signature = createSignatureMain();
+    private ReactionRule<PureBigraph> mainR3() throws Exception {
+        DynamicSignature signature = sigMain();
         PureBigraphBuilder<DynamicSignature> builder = pureBuilder(signature);
         PureBigraphBuilder<DynamicSignature> builder2 = pureBuilder(signature);
 
@@ -388,15 +401,14 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
 
         PureBigraph redex = builder.create();
         PureBigraph reactum = builder2.create();
-        ReactionRule<PureBigraph> rr = new ParametricReactionRule<>(redex, reactum); //instantiationMap
-        return rr;
+        return new ParametricReactionRule<>(redex, reactum);
     }
 
     /**
      * react r1 = Left.S | Right.S -> Left | Right;
      */
-    public static ReactionRule<PureBigraph> subR1() throws Exception {
-        DynamicSignature signature = createSignatureMain();
+    private ReactionRule<PureBigraph> subR1() throws Exception {
+        DynamicSignature signature = sigMain();
         PureBigraphBuilder<DynamicSignature> builder = pureBuilder(signature);
         PureBigraphBuilder<DynamicSignature> builder2 = pureBuilder(signature);
 
@@ -412,12 +424,11 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
         ;
         PureBigraph redex = builder.create();
         PureBigraph reactum = builder2.create();
-        ReactionRule<PureBigraph> rr = new ParametricReactionRule<>(redex, reactum); //instantiationMap
-        return rr;
+        return new ParametricReactionRule<>(redex, reactum);
     }
 
-    public static ReactionRule<PureBigraph> subR2() throws Exception {
-        DynamicSignature signature = createSignatureSub();
+    private ReactionRule<PureBigraph> subR2() throws Exception {
+        DynamicSignature signature = sigSub();
         PureBigraphBuilder<DynamicSignature> builder = pureBuilder(signature);
         PureBigraphBuilder<DynamicSignature> builder2 = pureBuilder(signature);
 
@@ -434,8 +445,8 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
         return new ParametricReactionRule<>(redex, reactum);
     }
 
-    public static ReactionRule<PureBigraph> subR3() throws Exception {
-        DynamicSignature signature = createSignatureMain();
+    private ReactionRule<PureBigraph> subR3() throws Exception {
+        DynamicSignature signature = sigMain();
         PureBigraphBuilder<DynamicSignature> builder = pureBuilder(signature);
         PureBigraphBuilder<DynamicSignature> builder2 = pureBuilder(signature);
 
@@ -452,32 +463,5 @@ public class SubBRSUnitTest extends BaseExampleTestSupport {
         PureBigraph redex = builder.create();
         PureBigraph reactum = builder2.create();
         return new ParametricReactionRule<>(redex, reactum);
-    }
-
-    public static DynamicSignature createSignatureMain() {
-        DynamicSignature sigM = pureSignatureBuilder()
-                .add("Item", 0)
-                .add("Queue", 0)
-                .add("Store", 0)
-                .add("Waiting", 0, ControlStatus.PASSIVE)
-                .add("Ready", 0, ControlStatus.PASSIVE)
-                .add("Finished", 0, ControlStatus.PASSIVE)
-                .create();
-
-
-        DynamicSignature merged = BigraphUtil.mergeSignatures(sigM, createSignatureSub());
-        return merged;
-    }
-
-    public static DynamicSignature createSignatureSub() {
-        return pureSignatureBuilder()
-                .newControl().identifier(StringTypedName.of("Plus")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .newControl().identifier(StringTypedName.of("Sum")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .newControl().identifier(StringTypedName.of("S")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .newControl().identifier(StringTypedName.of("Z")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .newControl().identifier(StringTypedName.of("Result")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .newControl().identifier(StringTypedName.of("Left")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .newControl().identifier(StringTypedName.of("Right")).arity(FiniteOrdinal.ofInteger(0)).assign()
-                .create();
     }
 }
